<?xml version="1.0"?>
<package format="3">
  <name>amr_forklift</name>
  <version>1.0.0</version>
  <description>Industry-standard ROS2 Autonomy &amp; Simulation package for the Nebula AGV.</description>
  <maintainer email="furknkrsli@gmail.com">Furkan Karsli</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>builtin_interfaces</depend>

  <!-- ROSIDL support -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
