<?xml version="1.0"?>
<package format="3">
  <name>turtle_tasks</name>
  <version>0.0.0</version>
  <description>Simplified turtle behavior tree package</description>
  <maintainer email="furknkrsli@gmail.com">furkan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>